<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/textView_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/title_task"
            android:textColorHint="@color/text_primary"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/png"
            app:srcCompat="@drawable/task1"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/editTextNumber_A"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/text_a"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/text_primary" />

        <EditText
            android:id="@+id/editTextNumber_B"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/text_b"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/text_primary" />


        <EditText
            android:id="@+id/editTextNumber_C"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/text_c"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/text_primary" />

        <EditText
            android:id="@+id/editTextNumber_X"
            android:layout_width="50dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/text_x"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/text_primary" />

        <Button
            android:id="@+id/button_result"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/btn_calc"
            android:onClick="onClick"
            android:textColorHint="@color/text_primary" />

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/text_default_result"
            android:textColorHint="@color/text_primary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>